# middletask-1-1-hunyuan

./: .gitignore  Comfy CLI部署量化版Qwen-Image-Edit.md  README.md  SAM2_Demo_Analysis.md  TODO.md  UI草图.pptx  app.py  fileSystem.md  fileSystem2.md  gradio_detailed_analysis.md  image_qwen_image_edit.json  index.html  workflow_design_doc.md  workflow_manager.py  ~$UI草图.pptx  任务开发框架.md  第三周汇报.md  第二周汇报.md  第四周汇报.md
Hunyuan3D/: .gitignore  AIO_gradio_app.py  app.py  click_app.py  current_requirements.txt  file_operations.py  gemini_gradio_app.py  gradio_app.py  hunyuan_logic.py  qwen_edit_logic.py  qwen_inpainting_logic.py  sam_logic.py  setup.md  sh_app.py
region_3d_system/: .gitignore  README.md  pyproject.toml  run_server.py
region_3d_system/backend/: server.py
region_3d_system/frontend/: index.html
region_3d_system/frontend/static/: app.js  style.css
region_3d_system/src/segmentation/: sam_processor.py
region_3d_system/tests/: test_sam_processor.py
sam2/: TODO.md  backend.Dockerfile  docker-compose.yaml  package-lock.json
sam2/demo/backend/server/: app.py
sam2/demo/backend/server/data/: schema.py  transcoder.py
sam2/demo/frontend/: schema.graphql
sam2/demo/frontend/schemas/: video-api-schema.graphql
sam2/demo/frontend/src/common/components/gallery/: DemoVideoGallery.tsx  VideoGalleryUploadImage.tsx  VideoGalleryUploadMedia.tsx  useUploadImage.ts  useUploadMedia.ts
sam2/demo/frontend/src/common/components/options/: UploadOption.tsx
static/js/: render_tree.js
workflow/: app.py  workflow_manager.py
(+4 files in other folders)
